--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
   ],
   "main": "./lib",
   "dependencies": {
-    "@google-cloud/pubsub": "^0.18.0"
+    "@google-cloud/pubsub": "^0.19.0"
   },
   "devDependencies": {
     "make-node": "^0.3.0",
-    "mocha": "^2.0.0",
-    "chai": "^3.0.0"
+    "proxyquire": "^2.0.1",
+    "mocha": "^5.2.0",
+    "chai": "^4.1.2",
+    "sinon": "^6.1.3",
+    "sinon-chai": "^3.2.0"
   },
   "scripts": {
     "test": "node_modules/.bin/mocha test/*.test.js"
